--- a/views/booking_dashboard.erb
+++ b/views/booking_dashboard.erb
@@ -25,7 +25,7 @@
       <div class="centered_text smaller_text"><%=t.booking_dashboard.delivery%></div>
     </div>
     <div class="grid_4" style="min-height: 7.5em">
-      <div class="centered_text more_contrast_text" style="font-size:3em"><%=@transit_today%></div>
+      <div class="centered_text more_contrast_text" style="font-size:3em"><a href="/admin/booking/reports/in-progress"><%=@transit_today%></a></div>
       <div class="centered_text smaller_text"><%=t.booking_dashboard.transit%></div>      
     </div>  
     <div class="grid_4" style="min-height: 7.5em">
