--- a/views/_prereservation_form.erb
+++ b/views/_prereservation_form.erb
@@ -1,22 +1,22 @@
-      <form name="element" class="form-element all-space" style="background: white">
+      <form id="prereservation_form" name="element" class="form-element all-space" style="background: white">
         <h3 id="prereservation_title" class="bottom-border-solid"><%=t.bookings_planning.prereservation.create_title%></h3>
         <input type="hidden" name="id" id="id"/>
         <div class="formrow">
           <label class="fieldtitle"><%=t.bookings_planning.prereservation.from%></label>
-          <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10"/>
+          <input type="text" name="date_from" id="date_from" class="date_control <% unless @product_family.time_to_from %>fieldcontrol<%end%>" size="15" maxlength="10"/>
           <% if @product_family.time_to_from %>
             <input type="text" name="time_from" id="time_from" maxlength="5" size="5"/>
           <% else %>
-            <input type="hidden" name="time_from" id="time_from"/>
+            <input type="hidden" name="time_from" id="time_from" value="<%=@product_family.time_start%>"/>
           <% end %>
         </div>
         <div class="formrow">
           <label class="fieldtitle"><%=t.bookings_planning.prereservation.to%></label>
-          <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10"/>
+          <input type="text" name="date_to" id="date_to" class="date_control <% unless @product_family.time_to_from %>fieldcontrol<%end%>" size="15" maxlength="10"/>
           <% if @product_family.time_to_from %>
             <input type="text" name="time_to" id="time_to" maxlength="5" size="5"/>
           <% else %>
-            <input type="hidden" name="time_to" id="time_to"/>
+            <input type="hidden" name="time_to" id="time_to" value="<%=@product_family.time_end%>"/>
           <% end %>
         </div>
         <div class="formrow">
