--- a/views/_booking_management_edit.erb
+++ b/views/_booking_management_edit.erb
@@ -1,6 +1,6 @@
 <script type="text/tmpl" id="new_booking_line_script">
   <form name="new_booking_line" class="all-space" style="background: white; min-width: 300px">
-    <h3>Añadir producto</h3>
+    <h3 class="guiblock">Añadir producto</h3>
     <input type="hidden" name="booking_id" value="<%%=entity.id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Producto</label>
@@ -19,7 +19,7 @@
 </script>
 <script type="text/tmpl" id="new_booking_extra_script">
   <form name="new_booking_extra" class="all-space" style="background: white; min-width: 300px">
-    <h3>Añadir extra</h3>
+    <h3 class="guiblock">Añadir extra</h3>
     <input type="hidden" name="booking_id" value="<%%=entity.id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Extra</label>
@@ -38,7 +38,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_line_item_id_script">
   <form name="update_booking_line_item_id" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar producto</h3>
+    <h3 class="guiblock">Modificar producto</h3>
     <input type="hidden" name="booking_line_id" value="<%%=booking_line_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Producto</label>
@@ -60,7 +60,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_line_quantity_script">
   <form name="update_booking_line_quantity" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar cantidad</h3>
+    <h3 class="guiblock">Modificar cantidad</h3>
     <input type="hidden" name="booking_line_id" value="<%%=booking_line_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Cantidad</label>
@@ -75,7 +75,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_line_item_cost_script">
   <form name="update_booking_line_item_cost" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar coste unitario</h3>
+    <h3 class="guiblock">Modificar coste unitario</h3>
     <input type="hidden" name="booking_line_id" value="<%%=booking_line_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Coste unitario (todos los días)</label>
@@ -90,7 +90,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_line_deposit_cost_script">
   <form name="update_booking_line_deposit_cost" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar fianza</h3>
+    <h3 class="guiblock">Modificar fianza</h3>
     <input type="hidden" name="booking_line_id" value="<%%=booking_line_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Fianza</label>
@@ -105,7 +105,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_extra_quantity_script">
   <form name="update_booking_extra_quantity" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar cantidad</h3>
+    <h3 class="guiblock">Modificar cantidad</h3>
     <input type="hidden" name="booking_extra_id" value="<%%=booking_extra_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Cantidad</label>
@@ -120,7 +120,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_extra_item_cost_script">
   <form name="update_booking_extra_item_cost" class="all-space" style="background: white; min-width: 300px">
-    <h3>Modificar coste unitario</h3>
+    <h3 class="guiblock">Modificar coste unitario</h3>
     <input type="hidden" name="booking_extra_id" value="<%%=booking_extra_id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Coste unitario (todos los días)</label>
@@ -135,7 +135,7 @@
 </script>
 <script type="text/tmpl" id="edit_booking_supplements_script">
   <form name="edit_booking_supplements" class="all-space" style="background: white; min-width: 300px">
-    <h3>Suplementos</h3>
+    <h3 class="guiblock">Suplementos</h3>
     <input type="hidden" name="booking_id" value="<%%=entity.id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Entrega fuera horas</label>
@@ -158,5 +158,63 @@
         <input id="update_booking_supplements_button" type="button" class="form-button blue-button" value="<%=t.entitymanagement.update%>"/>
       </div>
     </div>     
+  </form>
+</script>
+<script type="text/tmpl" id="booking_line_resource_detail_script">
+  <form name="update_booking_line_resource" class="all-space" style="background: white; min-width: 500px">
+    <h3 class="guiblock">Detalle del recurso</h3>
+    <div class="smaller_text highlight_block" style="max-width: 500px">
+      <p>Actualice esta información sólo en el caso que desee imprimir el contrato y los datos no correspondan.</p>
+      <p>Recuerde que para cambiar el recurso asignado dispone del <b>asistente de asignación de stock</b></div>
+    <input type="hidden" name="id" value="<%%=entity.id%>"/>  
+    <div class="container_12">
+      <div class="grid_6">
+        <div class="formrow">
+          <label class="fieldtitle">Categoría (producto)</label>
+          <input type="text" name="booking_item_category" class="fieldcontrol" readonly="readonly" maxlength="20" value="<%%=entity.booking_item_category%>"/> 
+        </div>
+        <div class="formrow">
+          <label class="fieldtitle">Referencia (stock)</label>
+          <input type="text" name="booking_item_reference" class="fieldcontrol" readonly="readonly" maxlength="50" value="<%%=entity.booking_item_reference%>"/> 
+        </div>   
+        <div class="formrow">
+          <label class="fieldtitle">Modelo</label>
+          <input type="text" name="booking_item_stock_model" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_stock_model%>"/> 
+        </div>  
+        <div class="formrow">
+          <label class="fieldtitle">Matrícula (identificador)</label>
+          <input type="text" name="booking_item_stock_plate" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_stock_plate%>"/> 
+        </div>                       
+      </div>
+      <div class="grid_6">
+        <div class="left-margin">
+          <div class="formrow">
+            <label class="fieldtitle">Característica 1</label>
+            <input type="text" name="booking_item_characteristic_1" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_characteristic_1%>"/> 
+          </div>
+          <div class="formrow">
+            <label class="fieldtitle">Característica 2</label>
+            <input type="text" name="booking_item_characteristic_2" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_characteristic_2%>"/> 
+          </div>
+          <div class="formrow">
+            <label class="fieldtitle">Característica 3</label>
+            <input type="text" name="booking_item_characteristic_3" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_characteristic_3%>"/> 
+          </div>
+          <div class="formrow">
+            <label class="fieldtitle">Característica 4</label>
+            <input type="text" name="booking_item_characteristic_4" class="fieldcontrol" maxlength="80" value="<%%=entity.booking_item_characteristic_4%>"/> 
+          </div>
+        </div>                                      
+      </div>
+    </div>
+    <div class="container_12">
+      <div class="grid_12">
+        <div class="navigation-bar bottom-margin">
+          <div class="navigation-bar-crud-buttons right-float">
+             <input id="update_booking_line_resource_button" type="button" class="form-button blue-button" value="<%=t.entitymanagement.update%>"/>
+          </div>
+        </div> 
+      </div>
+    </div>
   </form>
 </script>
