--- a/views/_booking_management_related_bookings.erb
+++ b/views/_booking_management_related_bookings.erb
@@ -1,44 +1,79 @@
-         <div class="overflow all-space" style="border:1px solid #EEE">
-           <div class="container_12">
-
-             <div class="grid_6"> 
-               <div id="linked_bookings">
-               </div>          
-               <div>
-                 <%% if (entity.main_booking_id && entity.main_booking_id != null) { %>
-                 <div>
-                   <button type="button" class="form-button red-button element-action-button top-margin-1line" id="unlink_booking" style="display: block; margin: 1.618em auto" 
+        <div class="overflow all-space" style="border:1px solid #EEE">
+          <div class="more_contrast_text bigger_text bottom-margin">Entrega y recogida real</div>
+          <form name="real_pickup_return_form" class="all-space" style="border:1px solid #EEE; padding-bottom: 1.45em">
+            <input type="hidden" name="id" value="<%%=entity.id%>"/>              
+            <div class="container_12">
+             <div class="grid_6">
+              <div class="formrow">
+                <label class="fieldtitle">Hora de entrega real (hh:mm)</label>
+                <input type="text" name="pickup_time" class="fieldcontrol" maxlength="5" value="<%%=entity.pickup_time%>"/> 
+              </div>
+              <div class="formrow">
+                <label class="fieldtitle">Agente que realiza entrega</label>
+                <input type="text" name="pickup_agent" class="fieldcontrol" maxlength="80" value="<%%=entity.pickup_agent%>"/> 
+              </div>                              
+             </div>
+             <div class="grid_6">
+              <div class="left-margin">
+                <div class="formrow">
+                  <label class="fieldtitle">Hora de recogida real (hh:mm)</label>
+                  <input type="text" name="return_time" class="fieldcontrol" maxlength="5" value="<%%=entity.return_time%>"/> 
+                </div>     
+                <div class="formrow">
+                  <label class="fieldtitle">Agente que realiza la recogida</label>
+                  <input type="text" name="return_agent" class="fieldcontrol" maxlength="80" value="<%%=entity.return_agent%>"/> 
+                </div>      
+              </div>                    
+             </div>
+            </div>
+            <div class="container_12">
+             <div class="navigation-bar bottom-margin">
+              <div class="navigation-bar-crud-buttons right-float right-margin">
+                <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+              </div>
+             </div>
+            </div>                           
+          </form>              
+          <div class="container_12">
+            <div class="grid_6"> 
+              <div class="more_contrast_text bigger_text bottom-margin top-margin">Reservas vinculadas</div>
+              <div id="linked_bookings">
+              </div>          
+              <div>
+                <%% if (entity.main_booking_id && entity.main_booking_id != null) { %>
+                <div>
+                  <button type="button" class="form-button red-button element-action-button top-margin-1line" id="unlink_booking" style="display: block; margin: 1.618em auto" 
                      data-action-method="POST"
                      data-action-url="/api/booking/unlink/<%%=entity.id%>"
                      data-confirm-message="<%=t.booking_management.form.unlink_booking_button_message%>"><%=t.booking_management.form.booking_single%></button>
-                 </div>
-                 <%% } else { %>
-                 <div>
-                   <button type="button" class="form-button black-button" id="link_booking" style="background: none; color:black;text-decoration:underline"><%=t.booking_management.form.booking_group%></button>
-                 </div>                  
-                 <%% } %>
-                 <form name="main_booking" id="main_booking_form" style="display:none">
-                   <input type="hidden" name="id" value="<%%=entity.id%>"/>                 
-                   <div class="element_template">
-                     <div class="entity-field">
-                       <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.main_booking_search %></span>
-                       <span class="entity-fieldvalue">
+                </div>
+                <%% } else { %>
+                <div>
+                  <button type="button" class="form-button black-button" id="link_booking" style="background: none; color:black;text-decoration:underline"><%=t.booking_management.form.booking_group%></button>
+                </div>                  
+                <%% } %>
+                <form name="main_booking" id="main_booking_form" style="display:none">
+                  <input type="hidden" name="id" value="<%%=entity.id%>"/>                 
+                  <div class="element_template">
+                    <div class="entity-field">
+                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.main_booking_search %></span>
+                      <span class="entity-fieldvalue">
                           <input type="text" maxlength="40" size="20" name="search_main_booking" id="search_main_booking"/>
                           <input type="hidden" name="main_booking_id" id ="main_booking_id" value="<%%=entity.main_booking_id%>"/>
-                       </span>
-                     </div>
-                   </div> 
-                   <div class="guiblock" style="display: none" id="display_selected_booking_container">
-                     <div class="entity-field centered_text" id="display_selected_booking" class="guiblock">
-                     </div>
-                     <div class="navigation-bar bottom-margin" id="link_booking_bar" style="display: none">
-                       <div class="navigation-bar-crud-buttons" style="float: none">
+                      </span>
+                    </div>
+                  </div> 
+                  <div class="guiblock" style="display: none" id="display_selected_booking_container">
+                    <div class="entity-field centered_text" id="display_selected_booking" class="guiblock">
+                    </div>
+                    <div class="navigation-bar bottom-margin" id="link_booking_bar" style="display: none">
+                      <div class="navigation-bar-crud-buttons" style="float: none">
                          <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.booking_management.form.booking_group%>" style="display: block; margin: 0 auto"/>
-                       </div>
-                     </div> 
-                   </div> 
-                 </form>
-               </div>
-             </div>
+                      </div>
+                    </div> 
+                  </div> 
+                </form>
+              </div>
             </div>
           </div>
+        </div>
