--- a/views/booking_activity_occupation.erb
+++ b/views/booking_activity_occupation.erb
@@ -42,18 +42,21 @@
         <tr>
           <td class="table-cell"><%= timetable %></td>
           <% occupation_detail.each do |day, value| %>
-            <% if value.is_a?Hash %>
+            <% quantities = value[:quantity] %>
+            <% real_capacity = value[:capacity] %>
+            <% if quantities.is_a?Hash %>
               <td class="table-cell centered_text">
                 <% total = 0 %>
-                <% value.each do |item_price_type, quantity| %>
+                <% quantities.each do |item_price_type, quantity| %>
                   <% total += quantity %>
                   <div <%if quantity >0%>class="more_contrast_text"<%end%>><%=activity_detail[:price_literals][item_price_type][0]%>:<%="%.f" %quantity%></div>
                 <% end %>
-                 <% percentage = total.to_f / activity_detail[:capacity].to_f * 100%>
-                  <div class="more_contrast_text <%if percentage > 0 %>occupation-detail<%end%>" style="top-margin:0.5em;bottom-margin:0.5em;border-top:1px solid #CCC; <% if percentage >= 100 %>background:red; color: white<%elsif percentage >= 75 and !percentage.infinite?%>background:orange<%elsif percentage > 0 and !percentage.infinite?%>background:yellow<%end%>" <%if percentage > 0%>data-url="/admin/booking/activity-detail?date=<%=@year%>-<%=@month.to_s.rjust(2, '0')%>-<%=day%>&time=<%=timetable%>&item_id=<%=activity_id%>&layout=no"<%end%>><%="%.f" %total%>/<%="%.f" %activity_detail[:capacity]%></div>             
+                 <% percentage = total.to_f / real_capacity.to_f * 100%>
+                  <div class="more_contrast_text <%if percentage > 0 %>occupation-detail<%end%>" style="top-margin:0.5em;bottom-margin:0.5em;border-top:1px solid #CCC; <% if percentage >= 100 %>background:red; color: white<%elsif percentage >= 75 and !percentage.infinite?%>background:orange<%elsif percentage > 0 and !percentage.infinite?%>background:yellow<%end%>" <%if percentage > 0%>data-url="/admin/booking/activity-detail?date=<%=@year%>-<%=@month.to_s.rjust(2, '0')%>-<%=day%>&time=<%=timetable%>&item_id=<%=activity_id%>&layout=no"<%end%>><%="%.f" %total%>/<%="%.f" %real_capacity%></div>
+                  <div><span class="ui-icon ui-icon-pencil edit-icon" data-date="<%=day%>" data-time="<%=timetable%>" data-activity-code="<%=activity_id%>" style="cursor: hand; cursor: pointer"></span></div>             
               </td>
             <% else %>
-            <td class="table-cell centered_text"><%=value%></td>
+            <td class="table-cell centered_text"><%=quantities%></td>
             <% end %>
           <% end %>
         </tr>
@@ -65,4 +68,6 @@
 
 </div>
 <div id="occupation-detail" class="all-space" style="width:800px; height: 400px; background: white; overflow-y: scroll; font-size: 1em; display: none">
+</div>
+<div id="dialog_container" class="all-space" style="width: 600px; min-height: 300px; background: white; display:none">
 </div>
